k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cotisations-ingress
  namespace: cotisations
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cotisations.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gestion-cotisations
                port:
                  number: 8080
